@@ -1,5 +1,51 @@
 % Installation
 
+### System Architecture
+
+Rundeck is a server application you host on a system you designate 
+a central administrative control point. Internally, Rundeck stores job
+definitions and execution history in a relational database. Output
+from command and job executions is saved on disk but can be forwarded
+to remote stores like S3 or Logstash. 
+
+Rundeck distributed command execution is performed using a pluggable
+node execution layer that defaults to SSH but plugins allow you
+to use other means like MCollective, Salt, WinRM, or your custom method. 
+Rundeck server configuration includes settings to define the outbound
+user allowed by the remote hosts. Remote machines
+are not required to make connections back to the server.
+
+![Rundeck architecture](../figures/fig0001.png)
+
+The Rundeck application itself is a Java-based webapp. The application provides both
+graphical interface and network interfaces used by the Rundeck shell
+tools. 
+
+Access to the Rundeck application requires a login and
+password. The default Rundeck installation uses a flat file user
+directory containing a set of default logins. Logins are defined in
+terms of a username and password as well as one or more user
+groups. An alternative configuration to the flat file user directory,
+is LDAP (e.g., ActiveDirectory) but Rundeck authentication and authorization
+is customizable via [JAAS](http://en.wikipedia.org/wiki/Java_Authentication_and_Authorization_Service).
+Users must also be authorized to perform actions like define a job
+or execute one. This is controlled by an access control facility that reads
+policy files defined by the Rundeck administrator. Privilege is
+granted if a user's group membership meets the requirements of the policy.
+
+Two installation methods are supported:
+
+* System package: RPM and Debian packaging is intended for managed installation and provides
+  robust tools that integrate with your environment, man pages, shell
+  tool set in your path, init.d startup and shutdown.
+  
+* Launcher: The launcher is intended for quick setup, to get you
+  running right away.  Perfect for bootstrapping a project or trying
+  a new feature.  
+
+Rundeck can also install as a WAR file into an external container like Tomcat.
+
+
 Assuming the system requirements are met, Rundeck can be installed
 either from source, system package or via the launcher.
 
@@ -24,17 +70,22 @@ to have access via [sudo].
 Rundeck is a Java-Servlet based server and therefore requires the Java
 runtime.
 
-The install process requires that the latest version of Java 1.6
+The install process requires that the latest version of Java 1.7
 be installed. Both the [Open JDK](http://openjdk.java.net/) and [Sun/Oracle](http://java.com/) JVMs can be used.
 You must have the JAVA_HOME environment variable defined
 in your environment before running the launcher.  The RPM will use the java found on your path. See [Setting JAVA_HOME](startup-and-shutdown.html#setting-java_home) if you want to run a different version of java.
 
 Verify your Java version to check it meets the requirement:
 
-    $ java -version
-    java version "1.6.0_22"
-    Java(TM) SE Runtime Environment (build 1.6.0_22-b04-307-10M3261)
-    Java HotSpot(TM) 64-Bit Server VM (build 17.1-b03-307, mixed mode)
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ {.bash}
+$ java -version
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+java version "1.7.0_55"
+OpenJDK Runtime Environment (rhel-2.4.7.1.el6_5-x86_64 u55-b13)
+OpenJDK 64-Bit Server VM (build 24.51-b03, mixed mode)
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
 
 #### Network access
 
@@ -45,7 +96,9 @@ When the server starts, it binds to several TCP ports by default:
 
 To check if the ports are free on a Unix host, run:
 
-    netstat -an | egrep '4440|4443' 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ {.bash}
+$ netstat -an | egrep '4440|4443' 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 If the ports are in use on the server, you will see output similar to below:
 
@@ -59,7 +112,7 @@ In addition, TCP port 22 (by default) needs to be open on the clients for SSH.
 Clients should be set up to allow the Rundeck server user to connect to
 the clients using SSH via public-key authentication. It should not
 prompt for a password. See
-[Configure remote machine for SSH](ssh.html#configuring-remote-machine-for-ssh)
+[Configure remote machine for SSH](../plugins-user-guide/ssh-plugins.html#configuring-remote-machine-for-ssh)
 in the Administration chapter.
 
 There are various ways for installing SSH on Windows; we recommend
@@ -69,13 +122,16 @@ There are various ways for installing SSH on Windows; we recommend
     
 ### Installing from Source
 
-Checkout the sources from [GitHub](https://github.com/dtolabs/rundeck)
+Checkout the sources from [GitHub](https://github.com/rundeck/rundeck)
 
 You can build either the launcher jar (self-running archive), or a RPM.
 
-    make
+    ./gradlew build
 
-Creates the rundeck-launcher.jar
+Creates artifacts:
+
+* `rundeckapp/target/rundeck-X.Y.war`
+* `rundeck-launcher/launcher/build/libs/rundeck-launcher-X.Y.jar`
 
 Build the RPM:
 
@@ -90,16 +146,24 @@ documentation as well.
 
 ### Installing with RPM
 
+Note: The latest install documentation is available at <http://rundeck.org/downloads.html>.
+
+Note, the java JDK must be installed. Install any JDK that is 1.7+.
+
 If you want to install Rundeck on Linux via a binary installer, you
 can generally do so through the RPM tool that comes with your distribution. 
 
-    # rpm -i rundeck-1.1.0.noarch.rpm
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ {.bash}
+# rpm -i rundeck-2.x.x.noarch.rpm rundeck-config-2.x.x.noarch.rpm
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
 
 To install it using yum, first install the yum repo package and then
 run yum install:
 
-    # rpm -Uvh http://rundeck.org/latest.rpm
-    # yum install rundeck
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ {.bash}
+# rpm -Uvh http://repo.rundeck.org/latest.rpm
+# yum install rundeck
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
 
 ### Installing with Launcher
 
@@ -108,27 +172,27 @@ Use the launcher as an alternative to a system package:
 1. Download the launcher jar file.
 1. Define RDECK_BASE environment variable to the location of the install
 
-    ~~~~~~~
+    ~~~~~~~ {.bash}
     export RDECK_BASE=$HOME/rundeck; # or where you like it
     ~~~~~~~
 
 1. Create the directory for the installation.
 
-    ~~~~~~~
+    ~~~~~~~ {.bash}
     mkdir -p $RDECK_BASE 
     ~~~~~~~
 
 1. Copy the launcher jar to the installation directory.
 
-    ~~~~~~~
-    cp rundeck-launcher-1.1.0.jar $RDECK_BASE
+    ~~~~~~~ {.bash}
+    cp rundeck-launcher-2.0.0.jar $RDECK_BASE
     ~~~~~~~
 
 1. Change directory and run the jar.
 
-    ~~~~~~~
+    ~~~~~~~ {.bash}
     cd $RDECK_BASE    
-    java -jar rundeck-launcher-1.1.0.jar
+    java -XX:MaxPermSize=256m -Xmx1024m -jar rundeck-launcher-2.0.0.jar
     ~~~~~~~
 
 1. Wait for the Started message.
@@ -139,7 +203,7 @@ Use the launcher as an alternative to a system package:
 
 1. Update your shell environment 
 
-    ~~~~~~~
+    ~~~~~~~ {.bash}
     PATH=$PATH:$RDECK_BASE/tools/bin
     MANPATH=$MANPATH:$RDECK_BASE/docs/man
     ~~~~~~~
@@ -158,7 +222,9 @@ rundeck launcher process.
 
 The launcher jar can take a number of options to specify how the server should start. If you execute with a "-h" you will see the usage information:
 
-    java -jar rundeck-launcher-1.3.0.jar -h
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ {.bash}
+java -XX:MaxPermSize=256m -Xmx1024m -jar rundeck-launcher-2.1.0.jar -h
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
 
     usage: java [JAVA_OPTIONS] -jar rundeck-launcher.jar  [-c PATH] [-d]
            [--installonly] [-s PATH] [-b PATH] [-p PATH] [-h] [-x PATH]
@@ -205,5 +271,66 @@ to the `java` command:
 * `loginmodule.conf.name` Name of a custom JAAS config file, located in the server's config dir.
 * `rundeck.config.name` Name of a custom rundeck config file, located in the server's config dir.
 * `rundeck.ssl.config` Path to the SSL config properties file to enable SSL. If not set, SSL is not enabled.
+* `rundeck.jetty.connector.forwarded` true/false. Set to true to enable support for "X-forwarded-\*" headers which may be sent by a front-end proxy to the rundeck server. See [Using an SSL Terminated Proxy](configuring-ssl.html#using-an-ssl-terminated-proxy).
+* `rundeck.jetty.connector.ssl.excludedProtocols` Comma-separated list of SSL protocols to disable. Default: 'SSLv3'. See [Disabling SSL Protocols](configuring-ssl.html#disabling-ssl-protocols).
+* `rundeck.jetty.connector.ssl.includedProtocols` Comma-separated list of SSL protocols to include. Default is based on available protocols. See [Disabling SSL Protocols](configuring-ssl.html#disabling-ssl-protocols).
+* `rundeck.jetty.connector.ssl.excludedCipherSuites` Comma-separated list of Cipher suites to disable. No default. See [Disabling SSL Protocols](configuring-ssl.html#disabling-ssl-protocols).
+* `rundeck.jetty.connector.ssl.includedCipherSuites` Comma-separated list of Cipher suites to enable. Default is based on available cipher suites. See [Disabling SSL Protocols](configuring-ssl.html#disabling-ssl-protocols).
 
-For more information about using SSL, see [Configuring Rundeck for SSL](ssl.html).
+For more information about using SSL, see [Configuring Rundeck for SSL](configuring-ssl.html).
+
+## First-Time Setup
+
+### Logins 
+
+Rundeck supports a number of user directory configurations. By
+default, the installation uses a file based directory, but connectivity to
+LDAP is also available. 
+See [Administration - Authentication](../administration/authenticating-users.html).
+
+The Rundeck installation process will have defined a set of temporary
+logins useful during the getting started phase.
+
+* `user`: Has access to run commands and jobs but unable to modify job
+  definitions. Password: "user"
+* `admin`: Belongs to the "admin" group and is automatically granted
+  the "admin" and "user" role privileges. Password: "admin"
+  
+### Group membership
+
+If you installed Rundeck using the RPM installation method, it will
+have created a unix group called "rundeck".
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+$ groups rundeck
+rundeck : rundeck
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+
+It also made several log files writable to members of the "rundeck" group.
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ {.bash}
+$ ls -l /var/log/rundeck/command.log
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+-rw-rw-r-- 1 rundeck rundeck 588 Dec  2 11:24 /var/log/rundeck/command.log
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+
+If you want to use the Rundeck shell tools, be sure to add that group
+to the necessary user accounts.
+
+Rundeck shell tool users that do not belong to group, rundeck, will
+get error messages like so:
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ {.bash}
+$ rd-jobs
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+log4j:ERROR setFile(null,true) call failed. java.io.FileNotFoundException: /var/log/rundeck/command.log (Permission denied)
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+
+Consult the [usermod] command to modify a user account.
+
+[usermod]: http://linux.die.net/man/8/usermod
+
